TASK-55 Fix error with gap scale at graphic.

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -36,6 +36,8 @@ html {
 
 .card:hover {
 	box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+}
+.card.panel:hover {
 	transform: scale(1.04);
 }
 
